assets/css/main.css
/* ... */
#banner .content .button:active {
  color: #fff;
  border-color: #616763;
}

/* Main */

#main {
  background: #fff;
  border-top: solid 5px #b1ddab;
  border-bottom: solid 5px #c1cac5;
  border-top-width: 35px;
  border-bottom-width: 10px;
  padding: 6em 0 6em 0;
}

/* Sidebar + Content */

.sidebar h2.major {
  text-align: left;
  margin: 0 0 1.5em 0;
}

.sidebar h2.major span {
  padding-left: 0;
}

/* Footer */

#footer {
  text-align: center;
  padding: 2em 0 2em 0;
}

#footer a {
  color: inherit;
}

#footer h2.major {
  margin: 0 0 1.5em 0;
}

#footer h2.major span {
  background: #f2f5f3;
}

/* Misc. custom classes */
.logosize {
  height: auto;
  width: 25em;
  max-width: 65vw;
  padding-top: 1em;
  padding-bottom: 1em;
}

.smallmargin {
  margin-bottom: 1em;
}

.mediummargin {
  margin-bottom: 3em;
}

.nobullets {
  list-style: none;
  list-style-type: none;
  padding-inline-start: 0;
  padding-left: 0;
}

.nopaddingleft {
  padding-left: 0;
}

.smallsectionmargin {
  margin-bottom: 3em;
}

.smallersectionmargin {
  margin-bottom: 2em;
}

.formsize {
  width: 50em;
  height: 75vh;
}

.videosize {
  width: 65vw;
  height: auto;
}

.marginbottom {
  margin-bottom: 2px;
}
/* Copyright */

#copyright {
  display: inline-block;
  background: #e7eae8;
  padding: 0.75em 2em 0.75em 2em;
  border-radius: 8px;
  color: #8b9790;
  margin: 2em 0 0 0;
}

#copyright a {
  color: inherit;
}

#copyright .menu {
  margin: 0;
}

#copyright .menu li {
  border-color: #c1cac5;
  border-width: 2px;
  line-height: 1em;
}

/* XLarge */

@media screen and (max-width: 1680px) {
  /* Basic */

  body,
  input,
  textarea,
  select {
    font-size: 12pt;
    line-height: 1.75em;
  }
}

/* Large */

@media screen and (max-width: 1280px) {
  /* Basic */

  body,
  input,
  textarea,
  select {
    font-size: 11pt;
  }

  /* Special */

  ul.special li a:before {
    font-size: 60px;
  }

  /* Box */

  .box.highlight h2 {
    font-size: 2.5em;
  }

  .box.highlight header > p {
    font-size: 1.25em;
  }

  .box.post h3 {
    font-size: 2.5em;
  }

  .box.post header > p {
    font-size: 1.25em;
  }

  /* Header */

  #header {
    font-size: 1.5em;
  }

  /* Banner */

  #banner {
    padding: 6em 0;
  }

  #banner .content {
    padding: 4em 0 3em 0;
  }

  #banner .content h2 {
    margin: 0 0 0.65em 0;
  }

  #banner .content p {
    margin: 0 0 1em 0;
  }

  /* Main */

  #main {
    border-top-width: 20px;
    border-bottom-width: 10px;
  }

  /* Footer */

  #footer {
    padding: 6em 0 6em 0;
  }
}

/* Medium */

#navPanel,
#titleBar {
  display: none;
}
/* ... */

